kubernetes/service-rp.yaml
apiVersion: v1
kind: Service
metadata:
  name: routeplaner-app-service
  namespace: bus
spec:
  selector:
    app: routeplaner-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  #type: ClusterIP
